--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 
 <html>
+
    <head>
       <title>The Christmas Story</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
    </head>
 
    <body>
+
 <header>
 <h1>The Christmas Story</h1>
 <h3>Not just another Hallmark movie</h3>
 </header>
+
 <main>
+
 <article>
 <h4>A garden long, long ago and far, far away</h4>
-<p>In the beginning, everything was perfect. Two people walking through the most beautiful garden, sun shining, birds chiping...beautiful weather and gorgeous scenery all around. But shelfishness got in the way and ruined the perfect setting. Sin had entered the world that God had created. The was now need for redemption.</p>
+<p>In the beginning, everything was perfect. Two people walking through the most beautiful garden, sun shining, birds chiping...beautiful weather and gorgeous scenery all around. But shelfishness got in the way and ruined the perfect setting. Sin had entered the world that God had created. Eden was no longer perfect. There was now a need for redemption.</p>
 </article>
 <article>
 <h4>A history of mistakes</h4>
-<p>Over the next several hundred years, people did as they pleased. Some were faithful and seeking after God. Many sought their own ways, none of which would get them back to the place of perfection they heard about.</p>
+<p>Over the next several hundred years, people did as they pleased. Some were faithful and seeking after God. Many sought their own ways, none of which would get them back to the place of perfection they heard about for generations.</p>
 </article>
 <article>
 <h4>A coming redemption foretold</h4>
@@ -38,7 +43,7 @@ A Savior was born! Fulfilling every prophecy that had been told - his birthplace
 </article>
 <article>
 <h4>A time of uncertainty</h4>
-<p>Yet while everything seemed hopeful, things weren't always the best. The many that didn't see a need to believe didn't want to hear they had sin and needed to trust in this Jesus. This man who was going against their laws and acting as if he had the right to do it. So to put an end to it, they plotted to have him killed. An innocent man left to suffer and die. Then it was finished.<p>
+<p>Yet while everything seemed hopeful, things weren't always the best. The many that didn't see a need to believe didn't want to hear they had sin and needed to trust in this Jesus. This man who was going against their laws and acting as if he had the right to do it. So to put an end to it, they plotted to have him killed. An innocent man left to suffer and die. Then it was finished.</p>
 </article>
 <article>
 <h4>A glorious hope</h4>
@@ -46,9 +51,12 @@ A Savior was born! Fulfilling every prophecy that had been told - his birthplace
 </article>
 <article>
 <h4>A choice remains</h4>
-If heaven exists for those who believe, what is left for those who don't? The sad reality is eternity separate from perfection is what remains. An dark and tortuous existence so far removed from anything we've ever experienced. While choosing Christ may not change our circumstances, it changes our hearts and brings hope of what's ahead. The best things in life on this earth are the best you'll ever see if you choose to not accept God's gracious gift. It's a choice and it's up to you to make.</p>
+<p>If heaven exists for those who believe, what is left for those who don't? The sad reality is eternity separate from perfection is what remains. An dark and tortuous existence so far removed from anything we've ever experienced. While choosing Christ may not change our circumstances, it changes our hearts and brings hope of what's ahead. The best things in life on this earth are the best you'll ever see if you choose to not accept God's gracious gift. It's a choice and it's up to you to make.</p>
+<h4>This is my story and it can be yours too</h4>
 </article>
 </main>
-<footer>This is my story and it can be yours to</footer>
+
+<footer>As someone who accepts this free gift, I feel called to share with others. I have prayed for opportunities to be more bold in sharing a message of hope and redemption from the broken world we live in. I'm always willing to talk more if you have questions.</footer>
+
 </body>
 </html>
