--- a/index.html
+++ b/index.html
@@ -10,53 +10,79 @@
    <body>
 
 <header>
+   <img src="images\goldstars.png" class = "border"/>
 <h1>The Christmas Story</h1>
-<h3>Not just another Hallmark movie</h3>
+<h3>As not told by Hallmark</h3>
 </header>
 
 <main>
 
 <article>
-<h4>A garden long, long ago and far, far away</h4>
-<p>In the beginning, everything was perfect. Two people walking through the most beautiful garden, sun shining, birds chiping...beautiful weather and gorgeous scenery all around. But shelfishness got in the way and ruined the perfect setting. Sin had entered the world that God had created. Eden was no longer perfect. There was now a need for redemption.</p>
+<h4>A perfect beginning</h4>
+<p class = "verses">In the beginning God created the heavens and the earth. And God said, "Let there be light. Let the land produce vegetation." God made two great lights—the greater light to govern the day and the lesser light to govern the night. He also made the stars. And God said, “Let the water teem with living creatures, and let birds fly above the earth across the vault of the sky. Let the land produce living creatures according to their kinds." God created mankind in his own image; male and female he created them. God saw all that he had made, and it was very good... 
+   The LORD God took the man and put him in the Garden of Eden to work it and take care of it. Then the LORD God made a woman, and he brought her to the man. And the LORD God commanded the man, “You are free to eat from any tree in the garden; but you must not eat from the tree of the knowledge of good and evil, for when you eat from it you will certainly die.” When the woman saw that the fruit of the tree was good for food and pleasing to the eye, and also desirable for gaining wisdom, she took some and ate it. She also gave some to her husband, who was with her, and he ate it. And God said, “Have you eaten from the tree that I commanded you not to eat from?”</p>
+<p class = "narrative">
+Thus followed centuries of unkept commands for the sake of selfish desire. The perfection of creation was lost.</p>
 </article>
+<br>
+<img src="images\landscape.png" class = "pictures"/>
+<br>
 <article>
-<h4>A history of mistakes</h4>
-<p>Over the next several hundred years, people did as they pleased. Some were faithful and seeking after God. Many sought their own ways, none of which would get them back to the place of perfection they heard about for generations.</p>
+<h4>A coming redemption</h4>
+<p class = "verses">For to us a child is born, to us a son is given, and the government will be on his shoulders. And he will be called Wonderful Counselor, Mighty God, Everlasting Father, Prince of Peace. Of the greatness of his government and peace there will be no end. He will reign on David’s throne and over his kingdom, establishing and upholding it with justice and righteousness from that time on and forever... He grew up before him like a tender shoot, and like a root out of dry ground. He had no beauty or majesty to attract us to him, nothing in his appearance that we should desire him... But he was pierced for our transgressions, he was crushed for our iniquities; the punishment that brought us peace was on him, and by his wounds we are healed.</p>
+<p class = "narrative">
+   Many were confused by the prophecies of a perfect child being king. Nothing like this had been seen before and it was years before it would come to be.</p>
 </article>
+<br>
 <article>
-<h4>A coming redemption foretold</h4>
-<p>As years progressed, kings came and went. No one in their own power could ever pay for their own sins or the transgressions of others. Sacrifices were required. Through it all, prophets foretold of a coming Savior who would forgive the sins of the world and bring hope of the original perfection of Eden.</p>
+<h4>A miracle child</h4>
+<p class = "verses">So Joseph went to Bethlehem the town of David to register with Mary, who was pledged to be married to him and was expecting a child. While they were there, the time came for the baby to be born, and she gave birth to her firstborn, a son. She wrapped him in cloths and placed him in a manger, because there was no guest room available for them. And there were shepherds living out in the fields nearby, keeping watch over their flocks at night. An angel of the Lord said to them, “Do not be afraid. I bring you good news that will cause great joy for all the people. Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.</p>
+<p class = "narrative">
+A Savior was born! Fulfilling every prophecy that had been told - his birthplace, his first visits, his family. This was no coincidence. It was a miracle. A reason to celebrate. The first Christmas!</p>
 </article>
+<img src="images\nativityscene.png" class = "pictures"/>
+<br>
 <article>
-<h4>Away in a Manger</h4>
-<p>Truly the familiar carol tells it best, "
-Away in a manger no crib for a bed.
-The little Lord Jesus lay down his sweet head.
-The stars in the sky looked down where he lay.
-The little Lord Jesus asleep on the hay."
-A Savior was born! Fulfilling every prophecy that had been told - his birthplace, his first visits, his family. This was no coincidence. It was a miracle.
+<h4>An extraordinary man</h4>
+<p class = "verses">Jesus got into the boat and his disciples followed him. Suddenly a furious storm came up on the lake, so that the waves swept over the boat. But Jesus was sleeping. The disciples went and woke him. Then he got up and rebuked the winds and the waves, and it was completely calm...
+   Jesus said to the paralyzed man, “Get up, take your mat and go home.” Then the man got up and went home. When the crowd saw this, they were filled with awe...
+   Jesus went on from there, two blind men came to him. Then he touched their eyes and their sight was restored...
+   Jesus performed many other signs in the presence of his disciples, which are not recorded in this book. But these are written that you may believe that Jesus is the Messiah, the Son of God, and that by believing you may have life in his name.</p>
+   <p class = "narrative">
+      Jesus was indeed extraordinary. He was human yet perfect unlike anyone else that had ever lived. He spoke with authority and performed many miracles. Jesus taught how to live a treat others. To love God first and then others. He taught to care for our enemies and we would care for our neighbors. He spoke of having a relationship with God instead of following a list of rules. He also spoke of a coming time when he had to die. Again many were confused.</p>
 </article>
-<article>
-<h4>An extraordinary child</h4>
-<p>Indeed this was no ordinary child. He was a child like the rest of us, but the son of God. Set apart but living among the world. He was perfect. Finally the only person who could forgive the sins of the world. Like the centuries before, many continued in their own ways and didn't believe the Messiah talked about was finally here. Jesus performed many miraculous signs, taught truth, lived generously and loved greater than anyone else that has ever lived or ever will.</p>
-</article>
+<br>
 <article>
 <h4>A time of uncertainty</h4>
-<p>Yet while everything seemed hopeful, things weren't always the best. The many that didn't see a need to believe didn't want to hear they had sin and needed to trust in this Jesus. This man who was going against their laws and acting as if he had the right to do it. So to put an end to it, they plotted to have him killed. An innocent man left to suffer and die. Then it was finished.</p>
+<p class = "verses">Then the detachment of soldiers with its commander and the Jewish officials arrested Jesus. They bound him and brought him first to Annas, who was the father-in-law of Caiaphas, the high priest that year. Caiaphas was the one who had advised the Jewish leaders that it would be good if one man died for the people. Then the Jewish leaders took Jesus from Caiaphas to the palace of the Roman governor... Pilate replied. “Your own people and chief priests handed you over to me. What is it you have done?” Jesus answered, “The reason I was born and came into the world is to testify to the truth." Pilate went out again to the Jews gathered there and said, “I find no basis for a charge against him." Finally Pilate handed him over to them to be crucified. So the soldiers took charge of Jesus." There they crucified him, and with him two others—one on each side and Jesus in the middle... Jesus said, “It is finished.” With that, he bowed his head and gave up his spirit.</p>
+<p class = "narrative">
+   It was indeed a dark time. An innocent man was crucified because the crowd had called for it. How can a someone who is supposed to be Savior, King and Lord be dead?</p>
 </article>
+<br>
+<img src="images\crosses.png" class = "pictures"/>
+<br>
 <article>
 <h4>A glorious hope</h4>
-<p> Prophecy was fulfilled! Sins were now forgiven! The hope that was taught became a reality! Jesus arose from the grave defeating death and defeating sin for the whole world. Thus the free gift of salvation through grace became available to the whole world. Nothing to earn it and nothing to keep us from it as long as we put our faith in God the Creator and his son, Jesus the Savior. One day perfection will be realized in heaven when those who chose to accept the free gift will join together praising God forever.</p>
+<p> After the Sabbath, at dawn on the first day of the week, Mary Magdalene and the other Mary went to look at the tomb. There was a violent earthquake, for an angel of the Lord came down from heaven and, going to the tomb, rolled back the stone and sat on it. The angel said to the women, “Do not be afraid, for I know that you are looking for Jesus, who was crucified. He is not here; he has risen, just as he said."...
+
+   Then the eleven disciples went to Galilee, to the mountain where Jesus had told them to go. Then Jesus came to them and said, “All authority in heaven and on earth has been given to me. Therefore go and make disciples of all nations, baptizing them in the name of the Father and of the Son and of the Holy Spirit, and teaching them to obey everything I have commanded you. And surely I am with you always, to the very end of the age.”
+</p>
+<p class = "narrative">   
+   It all made sense! Prophecy was fulfilled! Sins were now forgiven forever! The hope that was taught became a reality! Jesus arose from the grave defeating death and defeating sin for the whole world. Thus the free gift of salvation through grace became available to the whole world. Nothing to earn it and nothing to keep us from it as long as we put our faith in God the Creator and his son, Jesus the Savior. One day perfection will be realized in heaven when those who chose to accept the free gift will join together praising God forever.</p>
 </article>
+<br>
 <article>
 <h4>A choice remains</h4>
-<p>If heaven exists for those who believe, what is left for those who don't? The sad reality is eternity separate from perfection is what remains. An dark and tortuous existence so far removed from anything we've ever experienced. While choosing Christ may not change our circumstances, it changes our hearts and brings hope of what's ahead. The best things in life on this earth are the best you'll ever see if you choose to not accept God's gracious gift. It's a choice and it's up to you to make.</p>
-<h4>This is my story and it can be yours too</h4>
+<p class = "verses">All have sinned and fall short of the glory of God... The wages of sin is death, but the gift of God is eternal life in Christ Jesus our Lord... You see, at just the right time, when we were still powerless, Christ died for the ungodly. Very rarely will anyone die for a righteous person, though for a good person someone might possibly dare to die. But God demonstrates his own love for us in this: While we were still sinners, Christ died for us... Repent, then, and turn to God, so that your sins may be wiped out, that times of refreshing may come from the Lord... If you declare with your mouth, “Jesus is Lord,” and believe in your heart that God raised him from the dead, you will be saved.
+</p>
+<p class = "narrative">So the choice is yours. To believe and accept the free gift or not to. While your circumstances on earth might not change much now, your eternity will change forever. Hope is here.</p>
 </article>
+<h4 id = "myStory">This is my story, and it can be yours too.</h4>
 </main>
 
-<footer>As someone who accepts this free gift, I feel called to share with others. I have prayed for opportunities to be more bold in sharing a message of hope and redemption from the broken world we live in. I'm always willing to talk more if you have questions.</footer>
+<footer>
+   <p>As someone who has accepted this free gift, I feel called to share with others. I have prayed for opportunities to be more bold in sharing a message of hope and redemption from the broken world we live in. I'm always willing to talk more if you have questions. Thank you for taking time to read THE Christmas Story. Michelle Trevi&#241o</p>
+<p>Scripture quotations taken from The Holy Bible, New International Version&reg; NIV&reg; Copyright &copy; 1973 1978 1984 2011 by Biblica, Inc.s&trade; Used by permission. All rights reserved worldwide.</p></footer>
 
 </body>
 </html>
