--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ A Savior was born! Fulfilling every prophecy that had been told - his birthplace
 <p class = "narrative">So the choice is yours. To believe and accept the free gift or not to. While your circumstances on earth might not change much now, your eternity will change forever. Hope is here.</p>
 </article>
 <h4 id = "myStory">This is my story, and it can be yours too.</h4>
+<a href="mailto:michellenelson36@yahoo.com" id="contactMe">Contact Me</a>
 </main>
 
 <footer>
